[project]
name = "dsai490-assignment1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=1.23.5,<2.0.0",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.21.1.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "tensorflow==2.15.0",
]
